--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,17 @@
 {
     "name": "backend",
+    "private": true,
     "version": "1.0.0",
+    "type": "module",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "server": "node server.cjs"
+    },
+    "dependencies": {
+        "concurrently": "^8.2.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2"
     },
     "keywords": [],
     "author": "",
