--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
     "name": "argotep",
     "private": true,
     "version": "0.0.0",
-    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview",
-        "start-app": "react-scripts start",
-        "start-server": "node ./server.cjs"
+        "preview": "vite preview"
     },
     "dependencies": {
-        "concurrently": "^8.2.2",
-        "cors": "^2.8.5",
-        "express": "^4.18.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0"
