--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "eslint-plugin-react-refresh": "^0.4.5",
         "react-datepicker": "^4.25.0",
         "sass": "^1.69.7",
-        "vite": "^5.0.8"
+        "vite": "^5.0.8",
+        "zustand": "^4.5.0"
     }
 }
